introduction and tech stack added

--- a/src/common.scss
+++ b/src/common.scss
@@ -30,6 +30,7 @@ $color-33333366: #33333366;
 $color-1C1C1C66: #1c1c1c66;
 $color-333333: #333333;
 $color-EE2C3C: #ee2c3c;
+$color-b100ff: #b100ff;
 $container-2560: 2226px;
 $container-1920: 1620px;
 $container-1700: 1619px;
@@ -40,7 +41,7 @@ $container-1366: 1194px;
 $container-1280: 1113px;
 $container-1194: 1031px;
 $container-1080: 931px;
-$container-992: 700px;
+$container-992: 800px;
 
 body {
   font-family: "Poppins", sans-serif;
