--- a/src/common-mixins.scss
+++ b/src/common-mixins.scss
@@ -5,14 +5,12 @@
 }
 
 @mixin headingStyle {
-  font-size: 1.875em;
-  font-family: "Red Hat Display", sans-serif;
-  font-weight: 800;
+  font-size: 2.5em;
+  font-weight: bold;
   margin-bottom: 0.8em;
 }
 
 @mixin ctaStyle {
-  font-family: "Red Hat Display", sans-serif;
   display: flex;
   width: 100%;
   font-size: 1.5em;
@@ -50,8 +48,7 @@
 }
 
 @mixin descStyle {
-  font-size: 1.5em;
-  color: $color-212529;
+  font-size: 2em;
 }
 
 @mixin inputStyle {
@@ -101,6 +98,5 @@
   background-color: $color-00B2BA;
   text-align: center;
   padding: 3.875em 0;
-  font-family: "Red Hat Display", sans-serif;
   font-weight: bolder;
 }
