--- a/src/pages/Homepage/homepage.module.scss
+++ b/src/pages/Homepage/homepage.module.scss
@@ -14,7 +14,7 @@
     }
     .description {
       @include textStyles(2em, normal, 0);
-      max-width: 55%;
+      max-width: 75%;
       margin: 1em auto 0;
     }
   }
@@ -30,6 +30,170 @@
   }
 }
 
+.home_sec2 {
+  background: #b100ff;
+  .text_container {
+    text-align: center;
+    padding: 5em 0 30em;
+    color: $color-ffffff;
+    .heading {
+      @include textStyles(3em, normal, -1px);
+      font-weight: 600;
+    }
+    .description {
+      @include textStyles(2em, normal, 0);
+      max-width: 75%;
+      margin: 1em auto 0;
+    }
+  }
+}
+
+.home_sec3 {
+  background: $color-ffffff;
+  padding: 5em 0 5em;
+  margin: -25em 0 5em;
+  border-top-right-radius: 50px;
+  border-top-left-radius: 50px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-left: 1px solid rgba($color-00000029, 0.1);
+  border-right: 1px solid rgba($color-00000029, 0.1);
+  box-shadow: 0px 2.5px 10px 0px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  .text_container {
+    .heading {
+      @include textStyles(3em, normal, -1px);
+      font-weight: 600;
+      padding-bottom: 1em;
+    }
+    .description {
+      @include textStyles(2em, normal, 0);
+      max-width: 75%;
+      margin: 1em auto 0;
+    }
+  }
+  .tech_stack_wrap {
+    .row {
+      margin: 0;
+    }
+    .stack_category {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 2em 1em;
+      background: #fff;
+      border-radius: 50em;
+      margin: 1.5em 1em 3em;
+      transition: all ease 0.2s;
+      .category_icon {
+        width: 100%;
+        max-width: 4.688em;
+        margin-right: 2em;
+        transition: all 0.1s ease-in;
+        filter: drop-shadow(0.35em 0.35em 0.4em rgba($color-00000029, 0.25));
+      }
+      .subheading {
+        @include textStyles(2.5em, normal, 0);
+        font-weight: 500;
+        filter: drop-shadow(0.35em 0.35em 0.4em rgba($color-00000029, 0.25));
+      }
+    }
+    .icons_flex {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      .list_item {
+        position: relative;
+        padding: 2em 3em;
+        background: #fff;
+        border-radius: 1em;
+        margin: 1.5em 1em;
+        transition: all ease 0.2s;
+        box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
+        &:hover {
+          transform: translateY(-5px);
+          box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+        }
+        cursor: pointer;
+        .title {
+          @include textStyles(1.25em, normal, 0);
+          font-weight: 500;
+          position: absolute;
+          left: 0;
+          right: 0;
+          bottom: 0.4em;
+          margin: 0 auto;
+          display: none;
+          transition: all 0.1s ease-in;
+        }
+        .tech_icon {
+          width: 100%;
+          max-width: 4.688em;
+          transition: all 0.1s ease-in;
+          filter: drop-shadow(0.15em 0.15em 0.2em rgba(0, 0, 0, 0.25));
+        }
+        &:hover {
+          .title {
+            display: block;
+          }
+          .tech_icon {
+            margin-top: -0.5em;
+            margin-bottom: 0.5em;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .home_sec1 {
+    padding: 10.688em 0 7.5em;
+    .text_container {
+      padding: 2.5em 0 5em;
+      .description {
+        max-width: 100%;
+      }
+    }
+  }
+
+  .home_sec2 {
+    .text_container {
+      .description {
+        max-width: 100%;
+      }
+    }
+  }
+
+  .home_sec3 {
+    .text_container {
+      .heading {
+        padding: 0;
+      }
+    }
+    .tech_stack_wrap {
+      .stack_category {
+        margin: 5em 0 0;
+      }
+      .icons_flex {
+        .list_item {
+          width: 100%;
+          .title {
+            position: relative;
+            display: block;
+            bottom: 0;
+            font-size: 2em;
+            padding-top: 0.5em;
+          }
+          .tech_icon {
+            max-width: 5em;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 600px) {
   .home_sec1 {
     padding: 10em 0 10em;
@@ -37,12 +201,41 @@
       padding: 5em 0;
       .heading {
         font-size: 2.5em;
-        text-align: left;
       }
       .description {
         font-size: 1.4em;
         max-width: 100%;
-        text-align: left;
+        max-width: 75%;
+      }
+    }
+  }
+
+  .home_sec2 {
+    .text_container {
+      .heading {
+        font-size: 2.5em;
+      }
+      .description {
+        font-size: 1.4em;
+        max-width: 100%;
+        text-align: justify;
+      }
+    }
+  }
+
+  .home_sec3 {
+    padding: 2.5em 0;
+    .text_container {
+      .heading {
+        font-size: 2.5em;
+      }
+    }
+    .tech_stack_wrap {
+      .stack_category {
+        margin: 2.5em 0 0;
+        .subheading {
+          font-size: 2em;
+        }
       }
     }
   }
