--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -26,11 +26,14 @@
   }
 }
 .header_sec {
+  background-color: $color-F5F5F5;
+  -webkit-box-shadow: 0px 20px 46px $color-00000029;
+  -moz-box-shadow: 0px 20px 46px $color-00000029;
+  box-shadow: 0px 20px 46px $color-00000029;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  background-color: transparent;
   z-index: 9;
   padding: 1.5em 0;
   .heading_strip {
