--- a/src/pages/Homepage/homepage.module.scss
+++ b/src/pages/Homepage/homepage.module.scss
@@ -1,30 +1,32 @@
 @import "../../common.scss";
 
 .home_sec1 {
-  padding: 10.688em 0;
+  padding: 10.688em 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
   .text_container {
     text-align: center;
-    padding: 5em 0 10em;
+    padding: 5em 0 5em;
     .heading {
-      @include textStyles(3.5em, normal, 0);
+      @include textStyles(4em, normal, 0);
       font-weight: bolder;
+      margin: 0 auto;
     }
     .description {
       @include textStyles(2em, normal, 0);
       max-width: 75%;
-      margin: 1em auto 0;
+      margin: 0.5em auto 0;
     }
   }
   .img_wrapper {
     width: 100%;
-    max-width: 60em;
+    max-width: 70%;
+    // max-width: 60em;
     margin: 0 auto;
     .hero_img {
       width: 100%;
-      max-width: 60em;
+      // max-width: 60em;
       margin: 0 auto;
     }
   }
@@ -46,12 +48,24 @@
       margin: 1em auto 0;
     }
   }
+
+  .projects_wrapper {
+    padding: 5em 0 2.5em;
+    .project_box {
+      // padding: 0 1em;
+      overflow: hidden;
+      .project_img {
+        width: 100%;
+        border-radius: 2.5%;
+      }
+    }
+  }
 }
 
 .home_sec3 {
   background: $color-ffffff;
   padding: 5em 0 5em;
-  margin: -25em 0 5em;
+  margin: -25em 0 0;
   border-top-right-radius: 50px;
   border-top-left-radius: 50px;
   border-bottom-right-radius: 10px;
@@ -148,7 +162,7 @@
 
 @media (max-width: 992px) {
   .home_sec1 {
-    padding: 10.688em 0 7.5em;
+    padding: 10.688em 0 0;
     .text_container {
       padding: 2.5em 0 5em;
       .description {
@@ -196,7 +210,7 @@
 
 @media (max-width: 600px) {
   .home_sec1 {
-    padding: 10em 0 10em;
+    padding: 10em 0 0;
     .text_container {
       padding: 5em 0;
       .heading {
